fix lelAnd cheung and text-wrapping

--- a/static/base.css
+++ b/static/base.css
@@ -37,9 +37,10 @@ body {
     text-align: center;
 }
 
-.candidate_card > .candidate_website {
+.candidate_card .candidate_website {
     overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
     display: block;
 }
 
